migrate from HttpClient v3.1 to HttpClient v4.5.13
Migrate from the deprecated Apache (commons) HttpClient library to
httpcomponents-HttpClient.

Big thanks to Roel van Os for the initial upgrade!
https://github.com/elentirmo/agraph-java-client/tree/upgrade-http-client

Change-Id: I26e5d4530251a100af8ff81f053cddd50722eacd
Reviewed-on: https://gerrit.franz.com:9080/c/agraph-java-client/+/19600
Tested-by: John Foderaro <jkf@franz.com>
Reviewed-by: John Foderaro <jkf@franz.com>
Reviewed-by: Ivan Liubashenko <ivanl@franz.com>
PTEST: Hudson <hudson@franz.com>